--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
   font-family: "SpaceInvaders";
   src: url("./fonts/SpaceInvaders.ttf");
 }
+
+/* General */
 * {
   margin: 0;
   padding: 0;
@@ -17,6 +19,7 @@ body {
   font-family: "SpaceInvaders", sans-serif;
 }
 
+/* Canvas */
 .canvas-wrapper {
   display: flex;
   justify-content: center;
