--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,7 @@
-@font-face {
+/* @font-face {
   font-family: "SpaceInvaders";
   src: url("./fonts/SpaceInvaders.ttf");
-}
+} */
 
 /* GENERAL */
 * {
@@ -16,7 +16,7 @@ body {
   background-image: url(/images/bg-large.jpg);
   background-size: cover;
   background-position: center center;
-  font-family: "SpaceInvaders", sans-serif;
+  font-family: sans-serif;
 }
 
 /* CANVAS */
@@ -44,7 +44,7 @@ body {
   all: unset;
   position: absolute;
   cursor: pointer;
-  font-family: "SpaceInvaders", sans-serif;
+  font-family: sans-serif;
   color: #fff;
   text-transform: uppercase;
   font-size: 4em;
