--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,6 @@ body {
 
 /* START SCREEN */
 #startButton {
-  all: unset;
   position: absolute;
   cursor: pointer;
   font-family: sans-serif;
@@ -56,5 +55,39 @@ body {
     1px 10px 1px #919191, 1px 18px 6px rgba(16, 16, 16, 0.4),
     1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
     1px 30px 60px rgba(16, 16, 16, 0.4);
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
   transition: opacity 1s;
+}
+
+/* RESTART SCREEN */
+
+#restartButton {
+  position: absolute;
+  cursor: pointer;
+  font-family: sans-serif;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: 4em;
+  font-weight: 700;
+  color: #f5f5f5;
+  text-shadow: 1px 1px 1px #919191, 1px 2px 1px #919191, 1px 3px 1px #919191,
+    1px 4px 1px #919191, 1px 5px 1px #919191, 1px 6px 1px #919191,
+    1px 7px 1px #919191, 1px 8px 1px #919191, 1px 9px 1px #919191,
+    1px 10px 1px #919191, 1px 18px 6px rgba(16, 16, 16, 0.4),
+    1px 22px 10px rgba(16, 16, 16, 0.2), 1px 25px 35px rgba(16, 16, 16, 0.2),
+    1px 30px 60px rgba(16, 16, 16, 0.4);
+  background: transparent;
+  border: none;
+  outline: none;
+  padding: 0;
+  margin: 0;
+  transition: opacity 1s;
+}
+
+.hidden {
+  display: none;
 }
