--- a/styles/style.css
+++ b/styles/style.css
@@ -91,3 +91,12 @@ body {
 .hidden {
   display: none;
 }
+
+/* UI */
+
+.music-control {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 2;
+}
